--- a/ClassLibrary1/ClassLibrary2/DALEF.csproj
+++ b/ClassLibrary1/ClassLibrary2/DALEF.csproj
@@ -184,6 +184,10 @@
     <Compile Include="Migrations\201706130825555_12312wqhжюwer123.Designer.cs">
       <DependentUpon>201706130825555_12312wqhжюwer123.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201706131357059_123123123131.cs" />
+    <Compile Include="Migrations\201706131357059_123123123131.Designer.cs">
+      <DependentUpon>201706131357059_123123123131.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ColumnFormatRepository.cs" />
@@ -304,6 +308,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201706130825555_12312wqhжюwer123.resx">
       <DependentUpon>201706130825555_12312wqhжюwer123.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201706131357059_123123123131.resx">
+      <DependentUpon>201706131357059_123123123131.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
