--- a/ConsoleApplicationForTestingAPI/ConsoleApplicationForTestingAPI/ConsoleApplicationForTestingAPI.csproj
+++ b/ConsoleApplicationForTestingAPI/ConsoleApplicationForTestingAPI/ConsoleApplicationForTestingAPI.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\PositionService.cs" />
     <Compile Include="Services\PortfolioService.cs" />
+    <Compile Include="Services\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
