--- a/ClassLibrary1/PL/packages.config
+++ b/ClassLibrary1/PL/packages.config
@@ -10,6 +10,11 @@
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.17.45" targetFramework="net452" />
   <package id="bootstrap-select" version="1.12.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Glimpse" version="1.8.6" targetFramework="net452" />
+  <package id="Glimpse.Ado" version="1.7.3" targetFramework="net452" />
+  <package id="Glimpse.AspNet" version="1.8.0" targetFramework="net452" />
+  <package id="Glimpse.EF6" version="1.6.5" targetFramework="net452" />
+  <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net452" />
   <package id="jQuery" version="1.12.4" targetFramework="net452" />
   <package id="jquery.datatables" version="1.10.15" targetFramework="net452" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net452" />
